# T2-TP1-DeployWindows

./: README.md
TrabalhoTP1/: CMakeLists.txt  Makefile  README.md  TrabalhoTP1.cbp  TrabalhoTP1.depend  TrabalhoTP1.layout  TrabalhoTP1.pro  ui_controladora.h  ui_viewAutenticacao.h  ui_viewEventos.h  ui_viewUsuario.h  ui_viewVendas.h
TrabalhoTP1/bd/: example.db
TrabalhoTP1/doxygen/: doxyfile
TrabalhoTP1/doxygen/mainpage/: mainpage.md
TrabalhoTP1/include/: Builder.h  Dominios.h  Entidades.h  Interfaces_Apresentacao.h  Interfaces_Servicos.h  Model.h  ModelAutenticacao.h  ModelEventos.h  ModelUsuario.h  ModelVendas.h  controladora.h  viewAutenticacao.h  viewEventos.h  viewUsuario.h  viewVendas.h
TrabalhoTP1/lib/: example.db
TrabalhoTP1/lib2/: sqlite3.lib
TrabalhoTP1/source/: Builder.cpp  Dominios.cpp  Entidades.cpp  Model.cpp  ModelAutenticacao.cpp  ModelEventos.cpp  ModelUsuario.cpp  ModelVendas.cpp  controladora.cpp  main.cpp  viewAutenticacao.cpp  viewEventos.cpp  viewUsuario.cpp  viewVendas.cpp
TrabalhoTP1/test/: Teste_Dominios.cpp  Teste_Entidades.cpp
TrabalhoTP1/ui/: controladora.ui  viewAutenticacao.ui  viewEventos.ui  viewUsuario.ui  viewVendas.ui
